--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deployment.yaml
-- service.yaml
+  - deployment.yaml
+  - service.yaml
 
 images:
-- name: goserver
-  newName: sidartasilva/gitopsfullcycle
-  newTag: xpto
+  - name: goserver
+    newName: sidartasilva/gitopsfullcycle
+    newTag: newTag
